Code Refactoring for better quality